# SANS-fitter

./: .gitignore  COMPLETION_SUMMARY.md  DELIVERABLES.md  Dockerfile  GITHUB_SETUP.md  LICENSE  PROJECT_STRUCTURE.md  PR_SUMMARY.md  QUICKSTART.md  README.md  WEBAPP_README.md  app.py  demo_app.py  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.py  setup.sh  simulated_sans_data.csv  test_app.py
.github/workflows/: ci.yml  docs.yml  tests.yml
docs/: api.md  developer.md  index.md  installation.md  usage.md
examples/: plotting_example.py  structure_factor_example.py
notebooks/: sans_fitter_demo.ipynb  sasmodels-basic.ipynb
src/sans_fitter/: __init__.py  sans_fitter.py
tests/: README.md  __init__.py  test_sans_fitter.py
